# ai-chatbot

./: .gitignore  DEV_SCRIPTS.md  DOCKER.md  QUICKSTART.md  README.md  SETUP.md  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/backend-chat-service/: .dockerignore  README.md  env.example  init.sql
apps/backend-chat-service/app/api/routes/: chat.py
apps/backend-chat-service/app/core/: llm.py  ollama.py
apps/backend-chat-service/app/models/: chat.py
apps/backend-chat-service/app/services/: chat_service.py  mcp_service.py
apps/web/: package.json
apps/web/app/: page.tsx
apps/web/app/components/: ChatInput.tsx  LoadingIndicator.tsx  ModelSelector.tsx
apps/web/app/hooks/: useChat.ts
backend/: Dockerfile  README.md  env copy.example  main.py  pyproject.toml
backend/app/core/: __init__.py  config.py  llm.py  ollama.py
backend/app/services/: chat_service.py  mcp_service.py
docker/: docker-compose.yml  ollama-entrypoint.sh
frontend/: env.local.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/components/: ChatMessage.tsx  EmptyState.tsx
frontend/app/hooks/: useChat.ts  useChatMessages.ts  useModelSelection.ts
frontend/lib/: models.ts  tools.ts
test-data/: notes.md  sample.txt
